added content CIS team page

--- a/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
+++ b/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewBag.Title = "CISTeam";
 }
-<h1>SPACE</h1>
 <h1>CIS Team Members</h1>
 <div class="panel">
 
@@ -87,7 +86,7 @@
                     <h4>Caleb Samborski</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Caleb">Learn More</div>
-                    <div id="Caleb" class="collapse">More Info About Caleb</div>
+                    <div id="Caleb" class="collapse">Graduating Senior, and dual major in both Accountancy and Computer Information Systems. Originally from Westland, which is over on the east side of Michigan within the Metro Detroit area. Caleb is looking forward to taking the CPA examination this upcoming Summer 2017 and beginning his professional career in the field of Accounting. He is looking forward to obtaining a position where both his fields of study can be applied.</div>
                 </div>
             </div>
         </div>
@@ -122,14 +121,14 @@
     <!--Third Row-->
     <div class="row" style="margin-bottom:100px">
         <!-- First Member's Profile -->
-        <div class="col-md-4" style="margin-left:390px">
+        <div class="col-md-4" style="margin-left:390px;">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/website image.png" style="max-height:400px; min-width:250px">
                 <div class="caption text-center">
                     <h4>Conor Jager</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Conor">Learn More</div>
-                    <div id="Conor" class="collapse">More Info About Conor</div>
+                    <div id="Conor" class="collapse">Conor is a graduate from Ferris State University with a Dual Bachelor's degree in Accounting and Computer Information Systems. He is persueing a career as a business analyst, but would like to work other jobs in business and technology along the way. Conor is a Grand Rapids, Michigan native and also loves being active and outside.</div>
                 </div>
             </div>
         </div>
