Changes to footer

--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -80,23 +80,21 @@
                 <div class="row">
                     <div class="col-md-1 col-sm-1 col-lg-1"></div>
                     <div class="col-md-5 item" style="color: white; text-align: center;">
-                        <h3>Company Name</h3>
-                        <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut <br /> vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar <br /> dictum vel in justo.</p>
+                        <h3>TCS Soltuions</h3>
+                        <p>We are a devoted group of developers looking to make the world a safer and more informed place for adults and children alike.</p>
                     </div>
                     <div class="col-md-2 item" style="color: white; text-align: center;">
                         <h3>Services</h3>
                         <ul style="list-style-type: none; padding-right: 35px;">
-                            <li><a href="#">Web design</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Hosting</a></li>
+                            <li><a href="http://praesidium-beta.azurewebsites.net/Trafficking">Trafficking</a></li>
+                            <li><a href="http://praesidium-beta.azurewebsites.net/CyberSecurity">Cyber Security</a></li>
                         </ul>
                     </div>
                     <div class="col-md-2 item" style="color: white; text-align: center;">
                         <h3>About</h3>
                         <ul style="list-style-type: none; padding-right: 35px">
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Team</a></li>
-                            <li><a href="#">Careers</a></li>
+                            <li><a href="http://praesidium-beta.azurewebsites.net/Home/About">About</a></li>
+                           
                         </ul>
                     </div>
                     <br />
@@ -106,7 +104,7 @@
                     <a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
                 </div>
                 <div class="col-md-12" style="color: white; text-align: center;">
-                    <p>&copy; @DateTime.Now.Year - _Solutions</p>
+                    <p>&copy; @DateTime.Now.Year - TCS Solutions</p>
                 </div>
             </footer>
         </div>
