Multiple page analytic test

--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-
+<script src="~/Scripts/analytics.js"></script>
 <!-- Jumbotron -->
 
 <div class="container">
