Cyber Security test

--- a/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Adults";
 }
+<script src="~/Scripts/analytics.js"></script>
 
 <div class="row">
     <div class="col-md-8">
