--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Cyber Security Page";
 }
+<script src="~/Scripts/analytics.js"></script>
 
 <div class="container">
     <div class="jumbotron" id="cyber_sec_jumbo">
