--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/Scripts/knockout-3.4.0.js"></script>
     <script src="~/Scripts/lodash.js"></script>
     <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/analytics.js"></script>
 
     <script>
         function getAway() {
