--- a/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
+++ b/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
@@ -39,12 +39,12 @@
         <!-- First Member's Profile -->
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/Abigail.png" style="max-height:400px; max-width:280px">
                 <div class="caption text-center">
                     <h4>Abigail Herrera</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Abigail">Learn More</div>
-                    <div id="Abigail" class="collapse">More Info About Abigail</div>
+                    <div id="Abigail" class="collapse">Abigail Herrera is from a small town called Newaygo, Michigan. She is currently a senior at Ferris State University with a Dual Major in Accounting and Computer Information Systems. She is bi-lingual in English and Spanish. After graduation, she hopes to find employment where she will be able to apply her knowledge and experience in accounting and computer information systems.</div>
                 </div>
             </div>
         </div>
@@ -52,12 +52,12 @@
         <!-- Second Member's Profile -->
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/Russ.png"  style="max-height:450px; max-width:300px">
                 <div class="caption text-center">
                     <h4>Russ McGinely</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Russ">Learn More</div>
-                    <div id="Russ" class="collapse">More Info About Russ</div>
+                    <div id="Russ" class="collapse">Russ McGinley is a returning student, working on a Bachelor’s degree in Information System at Ferris State University. Russ lives in northern Michigan, where he hopes to use his degree to advance his career in Information Systems as a Systems Administrator.</div>
                 </div>
             </div>
         </div>
@@ -81,12 +81,12 @@
         <!-- First Member's Profile -->
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/Caleb.png" style="min-height:325px; min-width:175px">
                 <div class="caption text-center">
                     <h4>Caleb Samborski</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Caleb">Learn More</div>
-                    <div id="Caleb" class="collapse">Graduating Senior, and dual major in both Accountancy and Computer Information Systems. Originally from Westland, which is over on the east side of Michigan within the Metro Detroit area. Caleb is looking forward to taking the CPA examination this upcoming Summer 2017 and beginning his professional career in the field of Accounting. He is looking forward to obtaining a position where both his fields of study can be applied.</div>
+                    <div id="Caleb" class="collapse">Caleb is a graduating Senior ia a dual major in both Accountancy and Computer Information Systems. Originally from Westland, which is over on the east side of Michigan within the Metro Detroit area. Caleb is looking forward to taking the CPA examination this upcoming Summer 2017 and beginning his professional career in the field of Accounting. He is looking forward to obtaining a position where both his fields of study can be applied.</div>
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
         <!-- First Member's Profile -->
         <div class="col-md-4" style="margin-left:390px;">
             <div class="thumbnail">
-                <img src="~/Content/Images/website image.png" style="max-height:400px; min-width:250px">
+                <img src="~/Content/Images/website image.png" style="max-height:350px; min-width:200px">
                 <div class="caption text-center">
                     <h4>Conor Jager</h4>
                     <h4>Role: Scrum Member</h4>
