--- a/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
@@ -3,5 +3,31 @@
     ViewBag.Title = "Quiz";
 }
 
-<div class="quizz-container" data-width="100%" data-height="auto" data-quiz="373686"></div>
-<script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
+<head>
+    <h1 align ="center"> Quizzes!</h1>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
+   
+</head>
+<body>
+    <table>
+        <tr>
+            <td>
+                <div class="quizz-container" data-width="100%" data-iframe-title="QUIZ: Cyber Security: Youth" data-height="auto" data-quiz="380016"></div>
+                <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
+            </td>
+            <td>
+                <div class="quizz-container" data-width="100%" data-iframe-title="QUIZ: Cyber Security: Teens" data-height="auto" data-quiz="380128"></div>
+                <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
+            </td>
+            <td>
+                <div class="quizz-container" data-width="100%" data-iframe-title="QUIZ: Cyber Security:Law Enforcement" data-height="auto" data-quiz="380145"></div>
+                <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
+            </td>
+        </tr>
+    </table>
+</body>
