--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -13,34 +13,45 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="~/Content/Images/test1.jpg" id="carousel_img" />
+       
+         
+           
+            
+            <img src="~/Content/Images/save10.png"  id="carousel_img" />
             <div class="carousel-caption">
-                <h3 id="carousel_cap">Caption Text</h3>
+                <h3 id="carousel_cap">Trafficking</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum.
+                    Learn More About Trafficking Here!
                 </p>
-                <p id="carousel_btn"><a class="btn btn-danger btn-group-lg">Read More</a></p>
+                <p id="carousel_btn" 
+                   class= "btn btn-danger btn-group-lg">Read More</a></p>
             </div>
         </div>
         <div class="item">
+          
             <img src="~/Content/Images/test2.jpg" id="carousel_img" />
             <div class="carousel-caption">
-                <h3 id="carousel_cap">Caption Text</h3>
+                <h3 id="carousel_cap">Cyber Security</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum.
+                    Learn More About Cyber Security Here!
                 </p>
                 <p id="carousel_btn"><a class="btn btn-primary btn-group-lg">Read More</a></p>
             </div>
         </div>
         <div class="item">
-            <img src="~/Content/Images/test3.jpg" id="carousel_img" />
+          
+
+   
+
+            
+           
+ 
+         
+            
+            <img src="~/Content/Images/img04.jpg"  ng" id="carousel_img" />
             <div class="carousel-caption">
-                <h3 id="carousel_cap">Caption Text</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum 
-                bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum 
-                et malesuada fames ac ante ipsum primis in faucibus. 
+                <h3 id="carousel_cap">About Us!</h3>
+                <p> For More Information about Ferris State University!
                 </p>
                 <p id="carousel_btn"><a class="btn btn-success btn-group-lg">Read More</a></p>
             </div>
