--- a/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
@@ -3,63 +3,25 @@
     ViewBag.Title = "Teen";
 }
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
+<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
+    <div class="row">
+        <div class="col-md-12">
 
-    <!-- Wrapper for slides -->
+            <figure class="effect-caged">
 
-    <div class="carousel-inner">
-        <div class="item active">
-            <img src="~/Content/Images/test2.jpg" id="carousel_img" />
-            <div class="carousel-caption">
-                <div class="container">
-                    <h3 id="carousel_cap">Caption Text</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                        bibendum.
-                    </p>
-                    <p id="carousel_btn"><a class="btn btn-danger btn-group-lg">Read More</a></p>
-                </div>
-            </div>
+
+               
+                
+                <img src="~/Content/Images/teen.png"  d.png"" g" style="width:100%;max-height:330px;" />
+                <figcaption>
+                    <h1> <span>Teen</span></h1>
+                </figcaption>
+            </figure>
+
         </div>
-        <div class="item">
-            <img src="~/Content/Images/test2.jpg" id="carousel_img" />
-            <div class="carousel-caption">
-                <h3 id="carousel_cap">Caption Text</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum.
-                </p>
-                <p id="carousel_btn"><a class="btn btn-primary btn-group-lg">Read More</a></p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/Content/Images/test2.jpg" id="carousel_img" />
-            <div class="carousel-caption">
-                <h3 id="carousel_cap">Caption Text</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum.
-                </p>
-                <p id="carousel_btn"><a class="btn btn-success btn-group-lg">Read More</a></p>
-            </div>
-        </div>
+
     </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
 </div>
-
 <!-- Carousel -->
 
 <div class="row">
