--- a/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
@@ -31,7 +31,7 @@
     </div>
 
 </div>
-</br>
+<br />
 
 <div class="col-md-8">
     <p class="h2" style="text-align:center; color:slategray"><strong>Resources for staying safe online</strong></p><br />
@@ -57,4 +57,60 @@
 
     </div>
 
+﻿
+@{
+    ViewBag.Title = "Teen";
+}
+
+<div class="row">
+    <div class="col-md-8">
+
+        <p class="h2" style="text-align:center; color:slategray"><strong>Teen</strong></p><br /><br />
+
+
+        <p>
+            <h1>Welcome to the Teen resource page for Cyber Security</h1>
+            This is a page where teens can get non-judgemental information and serves to better educate them on issues that can help them avoid being unsafe online.
+
+        </p>
+
+    </div>
+    <div class="col-md-4 align-center ">
+        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Teen Page Links</strong></p>
+        <ul class="align-left">
+            <li><A HREF="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report</A></li>
+            <li><A HREF="http://www.innocentsatrisk.org">Innocents at Risk</A></li>
+            <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline</A></li>
+        </ul>
+
+        <br /><br />
+
+    </div>
+
+</div>
+<br />
+
+    <div class="col-md-8">
+        <p class="h2" style="text-align:center; color:slategray"><strong>Resources for staying safe online</strong></p><br />
+        <div class="well">
+            <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
+            <p>
+                <h2>Top 10 way you can stay safe online.</h2>
+                We know that being all grown up is the coolest and you just want to be treated like an adult. Unfortuantly not all adults have a good intention when they are trying to be your "Friend". Use these 10 tips to be cool but stay safe...
+
+            </p>
+
+        </div>
+
+        <div class="well">
+            <p class="h2" style="text-align:center; color:slategray"><strong>Article 2</strong></p><br />
+            <p>
+                <h2>Oversharing: What so bad about it</h2>
+                Your friend Nate tweeted that he was going to be at the basktball game and everyone should meet him there at 7:30. This seems harmless right? Well it could open the door to a predator and give him the information he needs to...
+                @Html.ActionLink("Teen Quiz", "Quiz", new { quizId = 2 }, new { @class = "btn btn-info", @title = "" })
+            </p>
+
+        </div>
+
+    </div>
 </div>
