change image on about page to TCS

--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -11,9 +11,9 @@
 
         <div style="text-align: center;">
 
-            <!-- Made the ferris image responsive to scaling *Caleb*-->
+            <!-- Updated image to TCS Solutions *Abigail*-->
 
-            <img src="~/Content/Images/img04.jpg" style="border: 2px solid black; width:100%;" class="img-responsive" />
+            <img src="~/Content/Images/TCS_Solutions.png" style="height:425px; width:100%;" class="img-responsive" />
         </div>
         <br />
         <div>
