Pictures Hopefully Work Now

--- a/Praesidium/Praesidium/Views/trafficking/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Youth.cshtml
@@ -13,7 +13,8 @@
 
                 
            
-                <img src="~/Content/Images/4.png" "g" style="width:100%;max-height:330px;" />
+         
+                <img src="~/Content/Images/pic4.png" " style="width:100%;max-height:330px;" />
                 <figcaption>
                     <h1> <span>Youth</span></h1>
                 </figcaption>
