Images on pages

--- a/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
@@ -28,6 +28,8 @@
 
     </div>
 
+    <img src="~/Content/Images/cyber_attack.jpg" style="height:450px; width:65%;" class="img-responsive" />
+
 </div>
 </br>
 
