--- a/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
@@ -17,6 +17,7 @@
     </div>
 
     <div class="col-md-4 align-center ">
+        <img src="~/Content/Images/cs_cloud.png" style="height:300px; width:400px" />
         <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Most Viewed Links</strong></p>
         <ul class="align-left">
             <li><A HREF="http://praesidium.azurewebsites.net">Website1</A></li>
