--- a/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
@@ -7,13 +7,14 @@
 <div class="row">
     <div class="col-md-8">
 
-        <p class="h2" style="text-align:center; color:slategray"><strong>Teachers</strong></p><br /><br />
+        <p class="h2" style="text-align:center; color:slategray"><strong>Welcome to the Teachers Resource Page for Cyber Security</strong></p><br /><br />
 
-
-        <p>
-            <h1>Welcome to the Teachers resource page for Cyber Security</h1>
+        <img src="~/Content/Images/cyber_security_computer.jpg" style="height:425px; width:100%" />
+       
+         <p>
+            <br />
             This is a page where teachers and other educators can learn tips and read articles and also access useful links to help educate thier students online.
-
+             <br />
         </p>
 
     </div>
@@ -33,7 +34,7 @@
 </br>
 
 <div class="col-md-8">
-    <p class="h2" style="text-align:center; color:slategray"><strong>Resources for staying safe online</strong></p><br />
+    <p class="h2" style="text-align:center; color:slategray"><strong>Resources for Staying Safe Online</strong></p><br />
     <div class="well">
         <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
         <p>
