--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -3,7 +3,11 @@
     ViewBag.Title = "Statistics";
 }
 <!-- Jumbotron -->
+
+<img src="~/Content/Images/Stop-Human-Trafficking.jpg" style="width:100%;max-height:330px;" />
+
 <div class="jumbotron">
+
     <h1>Trafficking Statistics</h1>
 
     <p></p>
