--- a/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
@@ -5,14 +5,15 @@
 
 <div class="row">
     <div class="col-md-8">
-
+           
         <p class="h2" style="text-align:center; color:slategray"><strong>Youth</strong></p><br /><br />
 
-
+        
         <p>
             <h1>Welcome to the Youth resource page for Cyber Security</h1>
             This is a page where youth (thats you!) can learn about being safe online!
 
+        <img src="~/Content/Images/cybersecurity1.jpg" style="height:350px; width:95%;" class="img-responsive" />
 
         </p>
 
