teens page image

--- a/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
@@ -6,15 +6,13 @@
 <div class="row">
     <div class="col-md-8">
 
-        <p class="h2" style="text-align:center; color:slategray"><strong>Teen</strong></p><br /><br />
-
-
         <p>
             <h1>Welcome to the Teen resource page for Cyber Security</h1>
             This is a page where teens can get non-judgemental information and serves to better educate them on issues that can help them avoid being unsafe online.
 
         </p>
 
+        <img src="~/Content/Images/cyber_hoodie.jpg" style="height:350px; width:100%;" class="img-responsive" />
     </div>
     <div class="col-md-4 align-center ">
         <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Teen Page Links</strong></p>
