Fixed trafficking photo

--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -17,7 +17,8 @@
          
            
             
-            <img src="~/Content/Images/save10.png"  id="carousel_img" />
+       
+            <img src="~/Content/Images/trafficking.png"   id="carousel_img" />
             <div class="carousel-caption">
                 <h3 id="carousel_cap">Trafficking</h3>
                 <p>
