Fixed The Carousel Images To All Be The Same Size

--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -30,7 +30,8 @@
         </div>
         <div class="item">
           
-            <img src="~/Content/Images/test2.jpg" id="carousel_img" />
+           
+            <img src="~/Content/Images/Cyber Final.png"  id="carousel_img" />
             <div class="carousel-caption">
                 <h3 id="carousel_cap">Cyber Security</h3>
                 <p>
