multiple changes; added image, fixed CB title pages

--- a/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
@@ -6,11 +6,9 @@
 <div class="row">
     <div class="col-md-8">
 
-        <p class="h2" style="text-align:center; color:slategray"><strong>Parent</strong></p><br /><br />
-
+        <p class="h2" style="text-align:center; color:slategray"><strong>Welcome to the Adult Resource Page</strong></p><br /><br />
 
         <p>
-          <h1>Welcome to the Adult resource page for Cyber Security</h1>
             This page is a resource for all adults, whether you are a parent, a grandparent, a police officer or even a official. This page will provide you with articles about the importance of providing a safe online experience for children and how you can go about that from your various roles.
         </p>
 
@@ -24,7 +22,6 @@
            
         </ul>
 
-        <br /><br />
 
     </div>
 
