--- a/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-8">
 
-        <p class="h2" style="text-align:center; color:slategray"><strong>Welcome to the Teachers Resource Page for Cyber Security</strong></p><br /><br />
+        <p class="h2" style="text-align:center; color:slategray"><strong>Welcome to the Teachers Resource Page</strong></p><br /><br />
 
         <img src="~/Content/Images/cyber_security_computer.jpg" style="height:425px; width:100%" />
        
