--- a/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
@@ -6,8 +6,10 @@
 <div class="row">
     <div class="col-md-8">
 
+        <p class="h2" style="text-align:center; color:slategray"><strong>Welcome to the Teen Resource Page</strong></p><br /><br />
+
         <p>
-            <h1>Welcome to the Teen resource page for Cyber Security</h1>
+        
             This is a page where teens can get non-judgemental information and serves to better educate them on issues that can help them avoid being unsafe online.
 
         </p>
