--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "About";
 }
 
-<h1 style="padding-left:12%;">About the Ferris Watchdog Program</h1>
+<h1 style="padding-left:12%;">Human Trafficking & Cyber Security Project</h1>
 <br />
 
 <div class="container">
@@ -13,7 +13,7 @@
             <!-- Made the ferris image responsive to scaling *Caleb*-->
 
     
-            <img src="~/Content/Images/ferris.png" g" style="border: 2px solid black; width:100%;" class="img-responsive" />
+            <img src="~/Content/Images/TCS_Solutions.png" g" style="height: 350px; width:100%;" class="img-responsive" />
         </div>
         <br />
         <div>
