--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -14,9 +14,7 @@
     <div class="carousel-inner">
         <div class="item active">
        
-         
-           
-            
+    
        
             <img src="~/Content/Images/trafficking.png"   id="carousel_img" />
             <div class="carousel-caption">
@@ -43,17 +41,10 @@
         <div class="item">
           
 
-   
-
-            
-           
- 
-         
-            
-            <img src="~/Content/Images/img04.jpg"  ng" id="carousel_img" />
+            <img src="~/Content/Images/aboutus (2).jpg" id="carousel_img" />
             <div class="carousel-caption">
                 <h3 id="carousel_cap">About Us!</h3>
-                <p> For More Information about Ferris State University!
+                <p> For More Information about T.C.S Solutions Project!
                 </p>
                 <p id="carousel_btn"><a class="btn btn-success btn-group-lg">Read More</a></p>
             </div>
