update cb resource page.

--- a/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
@@ -6,12 +6,19 @@
 <div class="row">
     <div class="col-md-8">
 
-        <p class="h2" style="text-align:center; color:slategray"><strong>How These Resources Can Help You</strong></p><br /><br />
+        <p class="h2" style="text-align:center; color:slategray"><strong>Resource Help</strong></p><br /><br />
+        <p>
+            Below are link and pages on how these resources will help Adults, Teachers, Teen, and Youth with Cyber Security.
+        </p>
+        <img src="~/Content/Images/cs_cloud.png" style="height:300px; width:400px" />
 
+        <br />  <br/> 
     </div>
 
+   
+
     <div class="col-md-4 align-center ">
-        <img src="~/Content/Images/cs_cloud.png" style="height:300px; width:400px" />
+        
         <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Most Viewed Links</strong></p>
         <ul class="align-left">
             <li><A HREF="http://praesidium.azurewebsites.net">Website1</A></li>
