--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
         <div>
             <footer>
 
-                <button id="get-away" style="font-family: 'Agency FB'; color: white" onclick="javascript: getAway();" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-warning-sign"></span><br /> Emergency Exit </button>
+                <button id="get-away" style="font-family: 'Agency FB'; color: white" onclick="javascript: getAway(); window.close();" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-warning-sign"></span><br /> Emergency Exit </button>
 
                 <div class="row">
                     <div class="col-md-1 col-sm-1 col-lg-1"></div>
