--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -15,8 +15,11 @@
     <script> 
         function escape1() {
             var i = 0;
-            if (i < 15) {
+            if (i < 3) {
                 window.location.replace('http://weather.com');
+                window.location.replace('http://google.com');
+                window.location.replace('http://foodnetwork.com');
+                window.location.replace('http://cookingchanneltv.com');
                 i++;
             } else {
  
