--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -16,10 +16,7 @@
         function escape1() {
             var i = 0;
             if (i < 3) {
-                window.location.replace('http://weather.com');
-                window.location.replace('http://google.com');
-                window.location.replace('http://foodnetwork.com');
-                window.location.replace('http://cookingchanneltv.com');
+                window.location.replace('http://weather.com', 'http://google.com', 'http://foodnetwork.com','http://cookingchanneltv.com');             
                 i++;
             } else {
  
