--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -16,7 +16,20 @@
         function escape1() {
             var i = 0;
             if (i < 3) {
-                window.location.replace('http://weather.com', 'http://google.com', 'http://foodnetwork.com','http://cookingchanneltv.com');             
+                window.location.replace('http://weather.com');
+
+                window.open("http://google.com", "_newtab");
+                window.close();
+              
+                window.open("http://weather.com", "_newtab");
+                window.close();
+              
+                window.open("http://booking.com", "_newtab");
+                window.close();
+               
+                window.open("http://travelocity.com", "_newtab");
+                window.close();
+                
                 i++;
             } else {
  
