--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -19,21 +19,20 @@
                 window.location.replace('http://weather.com');
 
                 window.open("http://google.com", "_newtab");
-                window.close();
+                self.close();
               
                 window.open("http://weather.com", "_newtab");
-                window.close();
-              
+                self.close();
+
                 window.open("http://booking.com", "_newtab");
-                window.close();
+                self.close();
                
-                window.open("http://travelocity.com", "_newtab");
-                window.close();
-                
+                window.open("http://travelocity.com", "_newtab");            
+                self.close();
+
                 i++;
             } else {
- 
-                window.close();
+
                 self.close();
             }
         }
