--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -13,29 +13,11 @@
     <script src="~/Scripts/analytics.js"></script>
 
     <script> 
-        function escape1() {
-            var i = 0;
-            if (i < 3) {
-                window.location.replace('http://weather.com');
-
-                window.open("http://google.com", "_newtab");
-                self.close();
-              
-                window.open("http://weather.com", "_newtab");
-                self.close();
-
-                window.open("http://booking.com", "_newtab");
-                self.close();
-               
-                window.open("http://travelocity.com", "_newtab");            
-                self.close();
-
-                i++;
-            } else {
-
-                self.close();
-            }
+        function getaway() {
+            window.open("http://weather.com", "_newtab");
+            window.close();
         }
+        
     </script>
 
 </head>
@@ -94,7 +76,7 @@
         <div>
             <footer>
 
-                <button id="get-away" style="font-family: 'Agency FB'; color: white" onclick="javascript: escape1();" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-warning-sign"></span><br /> Emergency Exit </button>
+                <button id="get-away" style="font-family: 'Agency FB'; color: white" onclick="javascript: getaway();" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-warning-sign"></span><br /> Emergency Exit </button>
 
                 <div class="row">
                     <div class="col-md-1 col-sm-1 col-lg-1"></div>
