--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -50,7 +50,9 @@
  
          
             
-            <img src="~/Content/Images/img04.jpg"  ng" id="carousel_img" />
+            
+      
+            <img src="~/Content/Images/Life is about finding people who are your kind of crazy! (5).png"   ng" id="carousel_img" />
             <div class="carousel-caption">
                 <h3 id="carousel_cap">About Us!</h3>
                 <p> For More Information about Ferris State University!
