--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
         <div class="item">
           
 
-            <img src="~/Content/Images/aboutus (2).jpg" id="carousel_img" />
+            <img src="~/Content/Images/Life is about finding people who are your kind of crazy! (5).png"  id="carousel_img" />
             <div class="carousel-caption">
                 <h3 id="carousel_cap">About Us!</h3>
                 <p> For More Information about T.C.S Solutions Project!
