--- a/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
@@ -10,9 +10,9 @@
             <figure class="effect-caged">
 
 
-               
-                
-                <img src="~/Content/Images/teen.png"  d.png"" g" style="width:100%;max-height:330px;" />
+
+
+                <img src="~/Content/Images/teen.png" style="width:100%;max-height:330px;" />
                 <figcaption>
                     <h1> <span>Teen</span></h1>
                 </figcaption>
@@ -32,10 +32,8 @@
             <div class="col-md-12">
                 <h1>Teens</h1>
                 <p class="lead">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.
+                    Teens are some of the most targeted victims when it comes to trafficking. This page focuses on teaching teens what human trafficking is,
+                    the importance of prevention, and ways to protect themselves.
                 </p>
             </div>
         </div>
@@ -43,21 +41,21 @@
         <div class="row">
 
             <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail" ><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resource 1</h2>
-                <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
-                <span class="btn btn-primary btn-lg">Check it out!</span>
+                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
+                <h2>What is Human Trafficking?</h2>
+                <p> Quick facts to educate yourself on human trafficking</p>
+                <a class="btn btn-primary btn-lg" href="https://www.letsgetangry.org/about-the-fight/">Check it out!</a>
             </div>
 
             <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail" ><img src="~/Content/Images/test2.jpg"  /></a>
+                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
                 <h2>Resource 2</h2>
                 <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec. </p>
                 <span class="btn btn-danger btn-lg">Check it out!</span>
             </div>
 
             <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail" ><img src="~/Content/Images/test2.jpg"  /></a>
+                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
                 <h2>Resource 3</h2>
                 <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
                 <span class="btn btn-success btn-lg">Check it out!</span>
