--- a/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
@@ -11,7 +11,7 @@
             <figure class="effect-caged">
 
 
-                <img src="~/Content/Images/adults.png"  g" style="width:100%;max-height:330px;" />
+                <img src="~/Content/Images/adults.png" style="width:100%;max-height:330px;" />
                 <figcaption>
                     <h1> <span>Adults</span></h1>
                 </figcaption>
@@ -31,35 +31,32 @@
             <div class="col-md-12">
                 <h1>Adults</h1>
                 <p class="lead">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.
+                    This page is targeted towards adults to teach them about the dangers of human trafficking and the signs to help recognize when trafficking may be taking place.
+                    It is meant to help inform them so that they can take appropriate actions to keep their children, and others, safe.
                 </p>
             </div>
         </div>
 
         <div class="row">
-
             <div class="col-md-4 col-sm-8 teen_res">
                 <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resource 1</h2>
-                <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
-                <span class="btn btn-primary btn-lg">Check it out!</span>
+                <h2>Innocents at Risk</h2>
+                <p> A short article, which also includes a five-minute video, about the dangers of human trafficking</p>
+                <a class="btn btn-success btn-lg" href="http://www.innocentsatrisk.org/human-trafficking">Check it out!</a>
             </div>
 
             <div class="col-md-4 col-sm-8 teen_res">
                 <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resource 2</h2>
-                <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec. </p>
-                <span class="btn btn-danger btn-lg">Check it out!</span>
+                <h2>Recognize the Signs</h2>
+                <p> An article from Polaris describing many of the potential red flags, or signs, of trafficking</p>
+                <a class="btn btn-primary btn-lg" href="https://polarisproject.org/recognize-signs">Check it out!</a>
             </div>
 
             <div class="col-md-4 col-sm-8 teen_res">
                 <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resource 3</h2>
-                <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
-                <span class="btn btn-success btn-lg">Check it out!</span>
+                <h2>7 Signs that Someone is Being Trafficked</h2>
+                <p> An article from CNN about 7 warning signs that someone may be being trafficked in an airport  </p>
+                <a class="btn btn-danger btn-lg" href="http://www.cnn.com/2015/07/30/travel/human-trafficking-at-airports/">Check it out!</a>
             </div>
 
         </div>
