--- a/Praesidium/Praesidium/Views/trafficking/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Youth.cshtml
@@ -11,10 +11,10 @@
 
             <figure class="effect-caged">
 
-                
-           
-         
-                <img src="~/Content/Images/pic4.png" " style="width:100%;max-height:330px;" />
+
+
+
+                <img src="~/Content/Images/pic4.png" style="width:100%;max-height:330px;" />
                 <figcaption>
                     <h1> <span>Youth</span></h1>
                 </figcaption>
@@ -34,10 +34,8 @@
             <div class="col-md-12">
                 <h1>Youth</h1>
                 <p class="lead">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.
+                    Youth are some of the most vulnerable targets out there when it comes to human trafficking. Because of this, we must take extra precaution
+                    in protecting our children and making sure they know how to protect themselves. This page will help do that.
                 </p>
             </div>
         </div>
@@ -46,9 +44,9 @@
 
             <div class="col-md-4 col-sm-8 teen_res">
                 <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resource 1</h2>
-                <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
-                <span class="btn btn-primary btn-lg">Check it out!</span>
+                <h2>Human Trafficking: Protecting Our Youth</h2>
+                <p> A section of this PDF talks about protecting our youth, some of the signs, and what you can do.</p>
+                <a class="btn btn-primary btn-lg" href="https://www.childwelfare.gov/pubPDFs/tipsheets-2016_en.pdf#page=24">Check it out!</a>
             </div>
 
             <div class="col-md-4 col-sm-8 teen_res">
