--- a/Praesidium/Praesidium/Views/Admin/Files.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Files.cshtml
@@ -1,23 +1,24 @@
-﻿@model IEnumerable<Praesidium.Data_Models.Admin.ShFile>
+﻿@using Microsoft.Ajax.Utilities
+@model IEnumerable<Praesidium.Data_Models.Admin.ShFile>
 
 @{
     ViewBag.Title = "Files";
 }
+
+<h2>Files</h2>
+
 <p>
     @Html.ActionLink("Create New", "FilesCreate")
 </p>
 <table class="table">
     <tr>
-        <th class="col-lg-2 col-md-2">
+        <th style="width: 20%;">
             @Html.DisplayNameFor(model => model.FileName)
         </th>
         <th>
-            
+            Content
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th class="col-lg-3">
             @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
@@ -41,27 +42,18 @@
             @Html.DisplayFor(modelItem => item.FileName)
         </td>
         <td>
-            @*@Html.DisplayFor(modelItem => item.FileStore)*@
-            @*@{
-                var base64 = Convert.ToBase64String(item.FileStore);
-                var filesrc = string.Format("data:{1};base64,{0}", base64,item.ContentType);
-            }
-            <a href='@filesrc'>Download</a>*@
-            @Html.ActionLink("Download File","File","Download",new { id=item.RecId},null)
+            @Html.ActionLink("Download","File","Download",new { id=item.RecId},null)
+            <br />
+            <a class="iframe" href="https://docs.google.com/gview?url=@Url.Action("File","Download",new { id=item.RecId},Request.Url.Scheme)">View</a>
         </td>
-        <th>
-            @Html.DisplayFor(modelItem => item.Title)
-        </th>
         <td>
-            @Html.DisplayFor(modelItem => item.Description)
+            @Html.DisplayFor(modelItem => item.Description).ToString().Substring(0,25)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ShUser1.Username)
         </td>
-        <td>
-            @if (item.DateUploaded.HasValue)
-            { @item.DateUploaded.Value.ToString("MM/dd/yyyy")}
-            @*@Html.DisplayFor(modelItem => item.DateUploaded)*@
+        <td
+            >@Html.DisplayFor(modelItem => item.DateUploaded)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ModifiedBy)
@@ -71,7 +63,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "FilesEdit", new { id=item.RecId }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @*@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
     </tr>
